--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/core": "^8.0.1",
     "@mantine/hooks": "^8.0.1",
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
