--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "react": "^19.1.0",
+    "react-devtools": "^6.1.2",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.1",
