--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.1",
+    "react-suggest": "^0.0.1",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
