--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
     "react-suggest": "^0.0.1",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
