--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@mantine/hooks": "^8.0.1",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-devtools": "^6.1.2",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
