--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "chart.js": "^4.5.0",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-devtools": "^6.1.2",
@@ -28,6 +29,7 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
     "react-suggest": "^0.0.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.7",
     "xlsx": "^0.18.5"
   },
