--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
     "react-suggest": "^0.0.1",
+    "reactjs-popup": "^2.0.6",
     "tailwindcss": "^4.1.7",
     "xlsx": "^0.18.5"
   },
