--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mantine/core": "^8.0.1",
     "@mantine/hooks": "^8.0.1",
+    "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "chart.js": "^4.5.0",
