--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-suggest": "^0.0.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.7",
+    "vn-num2words": "^1.0.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
