--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.5.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-big-calendar": "^1.19.4",
     "react-chartjs-2": "^5.3.0",
     "react-devtools": "^6.1.2",
     "react-dom": "^19.1.0",
