--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
+    "react-spreadsheet": "^0.10.1",
     "react-suggest": "^0.0.1",
     "reactjs-popup": "^2.0.6",
+    "scheduler": "^0.26.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.7",
     "vn-num2words": "^1.0.4",
